Ingress/nginx-ingress-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: nginx-ingress
spec:
  controller: nginx.org/ingress-controller
