Ingress/nginx-ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-development
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-app
  template:
    metadata:
      labels:
        app: nginx-ingres-app
    spec:
      serviceAccountName: nginx-ingress-sa
      containers:
      - image: nginx/nginx-ingress:edge
        imagePullPolicy: Always
	name: nginx-ingress-container
	ports:
	- name: http
	  containerPort: 80
	- name: https
	  cotainerPort: 443
	args:
	  - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
	  - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
