Ingress/nginx-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: nginx-ingress
spec:
  type: NodePort
  ports:
  - port 80
    targetPort: 80
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: nginx-ingress-app
